--- a/index.html
+++ b/index.html
@@ -1,11 +1,3 @@
-
-{% include header.html %}
-
-  {% include about.html %}
-  
-  {% include portfolio.html %}
-  
-  {% include contact.html %}
-   
-   
-{% include footer.html %}
+---
+layout: default
+---
